2001-10-27  Stefan Monnier  <monnier@cs.yale.edu>

	* mail/sendmail.el (mail-mode): Fix ordering in adaptive-fill-regexp.

2001-10-27  Gerd Moellmann  <gerd.moellmann@t-online.de>

	* net/ange-ftp.el (ange-ftp-send-cmd): Call fix-name-func for
	`mdtm'.  From "Forrest Cahoon" <forrest.cahoon@merrillcorp.com>.

2001-10-26  Tomas Abrahamsson  <tab@lysator.liu.se>

	* textmodes/artist.el (artist-version): 1.2.4.
	(artist-butlast-fn): New variable.
	(artist-butlast): New function.
	(artist-ellipse-mirror-quadrant): Use it.
	(artist-mouse-draw-poly): Use nil for `point-list'.
	(artist-mouse-draw-poly): Check for point-list being nil.

2001-10-26  Peter Kleiweg  <kleiweg@let.rug.nl>

	* progmodes/ps-mode.el (ps-mode-print-function): Remove quote for
	lambda expression.
	(ps-mode-menu-main): Submenu with options on/off was replaced with
	a toggle button.
	(ps-mode, ps-run-mode): Define with `define-derived-mode'
	(ps-mode): Autoload cookie added on same line as comment
	(ps-mode-tabkey, ps-mode-backward-delete-char):
	(ps-mode-r-balance): Replace `delete-horizontal-space' and
	`indent-to' with `indent-line-to'
	(ps-mode-print-buffer, ps-mode-print-region): Use `funcall'
	instead of `eval'.
	(ps-mode-print-region): Use `with-temp-buffer'.
	(ps-run-start): Use of `mapconcat'.  Use `apply' instead of	`eval'.
	(numerous places): Add back-tick and tick around names in
	docstrings, fix punctuation in docstrings, remove trailing spaces.

2001-10-25  Gerd Moellmann  <gerd@gnu.org>

	* startup.el (normal-top-level): Check for frame-initial-frame
	only if it's really used.

	* mail/mh-utils.el (mh-recenter): Call recenter with arg `(4)'.

	* progmodes/compile.el (compilation-parse-errors-filename-function):
	New variable.
	(compilation-parse-errors): Use it.

2001-10-24  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-engine.el (c-beginning-of-member-init-list):
	Better handling of C++ template args to avoid confusion with `<'